--- a/src/template.html
+++ b/src/template.html
@@ -1,6 +1,9 @@
 <html lang="en-us">
   <head>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <title>
+      <%= htmlWebpackPlugin.options.title %>
+    </title>
   </head>
   <body id="root">
 
